# surrogate_modeling

./: .env  .gitignore  .pre-commit-config.yaml  README.md  Weather_gen.py  architecture.md  cspell.json  features_upgrades.md  install-db-requirements.sh  pyproject.toml  requirements-db-14.3.txt  requirements-db-15.4.txt  requirements-test-14.3.txt  requirements-test-15.4.txt  requirements.txt
.cspell/: sumo_dict.txt
.databricks/: commit_outputs
.github/workflows/: lint.yml  run-tests.yml
Exploratory/private/: Monthly Data Creation and Model.py  Monthly Data Model.py
deprecated/Yearly_model/: Full_data_creation.py  Metadata_upgrade_creation.py  Resstock_model.py  Weather_gen.py  util_datagen.py
deprecated/infra_agnostic/: Makefile  datagen.py  model.py  utils.py
docs/: architecture.md  features_upgrades.md
exploratory/Shared/: MetaData Upgrade creation.py  Yearly Data Creation and Model w Upgrades_1_5.py
exploratory/private/: Monthly Data Creation.py
exploratory/shared/: MetaData Upgrade creation.py  Yearly Data Creation and Model w Upgrades_1_5.py  bucketed_model_evaluation.py  bucketed_model_metrics.py  cnn_model_evaluation.py  compare_model_metrics.py  evaluate_cnn_model.py  surrogate_model_build_dataset.py  test_model_externally.py
model_artifacts/: features_targets_upgrades.json  metrics_by_upgrade_type.csv  metrics_change_from_previous_version_by_upgrade_type.csv  readme.md
model_artifacts/01_00_00/: features_targets_upgrades.json  metrics_by_upgrade_type.csv
model_artifacts/01_01_00/: features_targets_upgrades.json  metrics_by_upgrade_type.csv
notebooks/: Feature Importance Analysis.py  Prediction  Diagnostics.ipynb  adding_performance_curve_params_exploration.ipynb
scripts/: (Clone) extract_data_01.py  03_model_training.py  build_feature_store.py  build_feature_store_02.py  extract_data.py  extract_data_01.py  gpu_usage.py  model_evaluation.py  model_evaluation_04.py  model_evaluation_version_comparison.py  model_evaluation_version_comparison.py.py  model_training.py  model_training_03.py  model_training_3.py  readme.md
scripts/deprecated/: model_evaluation_against_bucketed.py
scripts/megastock/: README.md  data_prep_01.py  feature_extract_02.py  sqftage_mapping.csv  write_databricks_to_bigquery.py  write_databricks_to_bigquery_03.py
sh/: install-requirements.sh
src/: Full_data_creation.py  Metadata_upgrade_creation.py  Model training (1).py  Resstock_model.py  Weather_gen.py  Yearly Data Generation and Model.py  __init__.py  build_dataset.py  build_feature_store.py  constants.py  datagen.py  datagen_db.py  extract_data.py  feature_utils.py  globals.py  gpu_usage.py  gpuutils.py  model.py  model_db.py  model_evaluation.py  model_testing.py  model_training.py  surrogate_model.py  util.py  utils.py  versioning.py
src/Yearly_model/: Full_data_creation.py  Metadata_upgrade_creation.py  Resstock_model.py  Weather_gen.py  util_datagen.py
src/Yearly_model/test_model_with_preprocessing/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src/Yearly_model/test_model_with_preprocessing/variables/: variables.data-00000-of-00001  variables.index
src/artifacts/01_00_00/: metrics_by_upgrade_type.csv
src/databricks/: build_feature_store.py  datagen.py  extract_data.py  gpu_usage.py  model.py  model_evaluation.py  model_training.py  monitor_cpu_gpu.py  nvidia-smi.py  surrogate_model.py
src/dmutils/: bsb.py  constants.py  data_cleaning.py  gpuutils.py  qa_utils.py  sumo.py  sumo_feature_transformation.py
src/dmutilslocal/: constants.py  data_cleaning.py  sumo.py
src/utils/: bsb.py  data_cleaning.py  data_io.py  gpuutils.py  qa_utils.py
tests/: extended_test_apply_upgrades.csv  test0.py  test_apply_upgrades.py  test_baseline_features_input.csv  test_constants.py  test_data_cleaning_utils.py  test_data_io_utils.py  test_dmlutils.py  test_dow_offset.py  test_feature_utils.py  test_output.csv  test_sumo_feature_building.py  test_upgraded_features.csv  test_utils.py  test_versioning_utils.py  test_year_shift.py
