# Common config file for python tools.

# Poetry

[tool.poetry]
name = "surrogate_modeling"
version = "1.2.1"
description = "Surrogate modeling."
authors = ["Miki Verma <miki@rewiringamerica.org>"]
readme = "README.md"
package-mode = false

# The priorities of these are backwards relative to what they should
# actually be. See
# https://www.notion.so/rewiringamerica/Poetry-performance-regression-when-using-private-artifact-repository-21cf6e7c7b4c496ab3526a86e7d7d641?pvs=4
# for details.
[[tool.poetry.source]]
name = "rewiring-america-python-repo"
url = "https://us-central1-python.pkg.dev/cube-machine-learning/rewiring-america-python-repo/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

google-cloud-bigquery = "^3.26"
google-cloud-bigquery-storage = "^2.26.0"

# These are RA projects in an internal repo.
dmlutils = "^0.13.6"
dmlbootstrap = "^0.3.1"

# This is to depend on essentially all the pinned
# versions of things found in the Databricks 14.3
# runtime. This means this project should only be
# run on 14.3 runtimes, possibly including the ML
# version. The minor .Z version tacked on the end
# is our internal revision number of the cluster 
# libraries.
radbcluster = "==14.3.1"

# These are from PyPi
usingversion = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ruff = "^0.5.5"
isort = "^5.13.2"
keyrings-google-artifactregistry-auth = "^1.1.2"
pre-commit = "^4.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.6.0"}
pytest-cov = "^5.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Linting tools

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["D"]
extend-ignore = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
